// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`MapToDropdown should render the advanced component with basic config 1`] = `
<DocumentFragment>
  <div
    aria-expanded="true"
    aria-haspopup="true"
    class="dropdown"
  >
    <button
      class="button tertiary"
      type="button"
    >
      View proteins
    </button>
    <div
      class="dropdown__content"
    >
      <ul>
        <li>
          <a
            href="/uniprotkb?query=%28source%3AARBA00013665%29"
          >
            UniProtKB (618)
          </a>
        </li>
        <li>
          <a
            href="/uniprotkb?query=%28source%3AARBA00013665%29+AND+%28reviewed%3Atrue%29"
          >
            UniProtKB reviewed (Swiss-Prot) (10)
          </a>
        </li>
        <li>
          <a
            href="/uniprotkb?query=%28source%3AARBA00013665%29+AND+%28reviewed%3Afalse%29"
          >
            UniProtKB unreviewed (TrEMBL) (608)
          </a>
        </li>
      </ul>
    </div>
  </div>
</DocumentFragment>
`;

exports[`MapToDropdownBasic should render the basic component 1`] = `
<DocumentFragment>
  <div
    aria-expanded="true"
    aria-haspopup="true"
    class="dropdown"
  >
    <button
      class="button tertiary"
      type="button"
    >
      Map to
    </button>
    <div
      class="dropdown__content"
    >
      <ul>
        <li>
          <a
            href="/path"
          >
            UniParc (10)
          </a>
        </li>
      </ul>
    </div>
  </div>
</DocumentFragment>
`;
